Fixed wrong color on hamburger icon

--- a/src/css/modules/_navbar.scss
+++ b/src/css/modules/_navbar.scss
@@ -3,7 +3,7 @@
     margin-bottom: 16px;
 
     .navbar-burger span {
-        background: white;
+        background: #111;
         height: 2px;
         border-radius: 2px;
     }
